# cmakelearn

03动态库/: CMakeLists.txt
04动态库和静态库一起/: CMakeLists.txt
04动态库和静态库一起/include/: hello.h
04动态库和静态库一起/src/: Hello_share.cpp  Hello_static.cpp
